--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.9.4",
     "uid": "^2.0.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5",
